--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 
-    <span>{{ title }} app is running!</span>
-
-  
+    <span>{{ title }}</span>
+    
+  <app-formular-form></app-formular-form>
 
 
 <router-outlet></router-outlet>
