--- a/client/src/app/formular-form/formular-form.component.html
+++ b/client/src/app/formular-form/formular-form.component.html
@@ -34,7 +34,7 @@
     <button type="submit">Submit</button>
   </form>
   
-  {{ registrationForm.value | json }}
+  <!-- {{ registrationForm.value | json }} -->
   
   </div>
   
