--- a/client/src/app/admin-edit/admin-edit.component.html
+++ b/client/src/app/admin-edit/admin-edit.component.html
@@ -25,7 +25,7 @@
         <b>Date</b>  : {{listinfo.datum}}
       </li>
       <button>Edit</button>
-      <button>Delete</button>
+      <button (click)="deleteHandler(listinfo)">Delete</button>
       <hr />
 
 </ul>
