--- a/client/src/app/formular-form/formular-form.component.html
+++ b/client/src/app/formular-form/formular-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="registrationForm" (ngSubmit)="submitHandler()">
     <div class="form-group">
         <label>Email</label>
         <input formControlName="email"  type="email" class="form-control" >
