Edit section done when edit button clicked data is being immediately fetcht via GET request and brought to frontend to fufil the input fields

--- a/client/src/app/admin/admin-delete.component.html
+++ b/client/src/app/admin/admin-delete.component.html
@@ -24,7 +24,7 @@
       <li>
         <b>Date</b>  : {{listinfo.datum}}
       </li>
-      <button>Edit</button>
+      <button (click)="editHandler(listinfo)">Edit</button>
       <button (click)="deleteHandler(listinfo)">Delete</button>
       <hr />
 
