--- a/client/src/app/formular-form/formular-form.component.html
+++ b/client/src/app/formular-form/formular-form.component.html
@@ -1,33 +1,33 @@
 <div>
   <form [formGroup]="registrationForm" (ngSubmit)="submitHandler()">
     <div class="form-group">
-        <label>Email</label>
-        <input formControlName="email"  type="email" class="form-control" >
+        <label for="">Email</label>
+        <input formControlName="email" name="email" placeholder="Email" type="email" class="form-control" >
     </div>
   
     <div class="form-group">
-        <label>Land</label>
-        <input formControlName="land" type="land" class="form-control" >
+        <label for="land">Land</label>
+        <input formControlName="land" name="land" placeholder="Land" type="text" class="form-control" >
     </div>
   
     <div class="form-group">
-        <label>Ort</label>
-        <input formControlName="ort" type="text" class="form-control" >
+        <label for="ort">Ort</label>
+        <input formControlName="ort" name="ort" placeholder="Ort" type="text" class="form-control" >
     </div>
   
     <div class="form-group">
-        <label>Strase</label>
-        <input formControlName="strase" type="text" class="form-control" >
+        <label for="strase">Strase</label>
+        <input formControlName="strase" name="strase" placeholder="Strase" type="text" class="form-control" >
     </div>
   
     <div class="form-group">
-        <label>PLZ</label>
-        <input formControlName="PLZ" type="number" class="form-control" >
+        <label for="PLZ">PLZ</label>
+        <input formControlName="PLZ" name="PLZ" placeholder="PLZ" type="number" class="form-control" >
     </div>
   
     <div class="form-group">
-        <label>Datum</label>
-        <input formControlName="datum" type="date" class="form-control" >
+        <label for="">Datum</label>
+        <input formControlName="datum" name="datum" type="date"  class="form-control" >
     </div>
   
   
