--- a/client/src/app/formular-form/formular-form.component.html
+++ b/client/src/app/formular-form/formular-form.component.html
@@ -1,5 +1,11 @@
-<div>
-  <form [formGroup]="registrationForm" (ngSubmit)="submitHandler()">
+
+<div class="col-12 mt-5 ">
+    <div *ngIf="alert" class="container mt-5">
+        <div class="alert alert-success" role="alert">
+          Form Submitted Successfully
+        </div>
+      </div>
+  <form class="w-100 col-12 mt-5 pt-4" [formGroup]="registrationForm" (ngSubmit)="submitHandler()">
     <div class="form-group">
         <label for="">Email</label>
         <input formControlName="email" name="email" placeholder="Email" type="email" class="form-control" >
@@ -30,11 +36,8 @@
         <input formControlName="datum" name="datum" type="date"  class="form-control" >
     </div>
   
-  
-    <button type="submit">Submit</button>
+    <button type="submit" class="btn btn-danger">Submit</button>
   </form>
   
-  <!-- {{ registrationForm.value | json }} -->
-  
+
   </div>
-  
