--- a/client/src/app/formular-form/formular-form.component.scss
+++ b/client/src/app/formular-form/formular-form.component.scss
@@ -9,3 +9,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.main_wrapper  {
+  width: 100% !important;
+}
