--- a/client/src/app/view/view.component.scss
+++ b/client/src/app/view/view.component.scss
@@ -3,10 +3,45 @@ ul {
   display: flex;
   justify-content: center;
   li {
-    padding: 1rem 3rem;
+    padding: 3rem 5rem;
     text-decoration: none;
     list-style : none;
  
     
   }
+}
+table {
+  width: 100%;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
